fix from mentor's reviews     realign sections     rename classes     fix font     update README & gitignore

--- a/practice-1/src/assets/css/get-start.css
+++ b/practice-1/src/assets/css/get-start.css
@@ -39,6 +39,24 @@
 # BUTTONS
 ----------------- */
 
+.btn--explore {
+  display: flex;
+  align-items: center;
+  border: 1px solid #eeeeee;
+}
+
+.btn--get-start {
+  font-weight: var(--font-weight-normal);
+  border: 1px solid #eeeeee;
+  box-shadow: none;
+}
+
+.btn--watch-demo {
+  color: var(--font-color);
+  font-weight: var(--font-weight-normal);
+  border: 1px solid #eeeeee;
+}
+
 .get-start__image__btn {
   position: absolute;
   color: var(--font-color);
@@ -63,10 +81,11 @@
 # TITLE
 ----------------- */
 
-.get-start .text-container {
+.get-start .container {
+  flex-direction: column;
   align-items: flex-start;
   row-gap: 15px;
-  width: 412px;
+  width: 400px;
 }
 
 .get-start__title {
