--- a/practice-1/src/assets/css/key-feature.css
+++ b/practice-1/src/assets/css/key-feature.css
@@ -18,8 +18,9 @@
 .key-feature .container {
   flex-direction: column;
   align-items: flex-start;
-  gap: 70px;
-  padding: 0 30px;
+  row-gap: 50px;
+  padding: 0;
+  width: 550px;
 }
 
 
@@ -46,15 +47,15 @@
   flex: none;
   justify-content: flex-start;
   gap: 30px;
-  border: 1px solid rgba(25, 24, 37, 0.1);
   border-radius: 25px;
   padding: 30px;
   cursor: default;
   transition: var(--transition-fast);
+  border: 1px solid rgba(25, 24, 37, 0.1);
 }
 
 .key-feature__item:hover {
-  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .key-feature__item__icon {
